--- a/deploy-new-docker.yml
+++ b/deploy-new-docker.yml
@@ -49,8 +49,9 @@
                 } 
              }'
              
-    - pause:
-      minutes: 1
+- name: Pause for 1 minutes to build app cache
+  pause:
+    minutes: 1
 
     - name: "start load test"
       uri:
