--- a/deploy-new-docker.yml
+++ b/deploy-new-docker.yml
@@ -80,7 +80,7 @@
              
     - name: "Fire requests to verify if the application is working as expected"
       uri:
-        url: https://{{my_ip}}:3000/api/users/
+        url: http://{{my_ip}}:3000/api/users/
         method: GET
       with_sequence: count="5"  
              
