--- a/deploy-new-docker.yml
+++ b/deploy-new-docker.yml
@@ -82,6 +82,8 @@
       uri:
         url: http://{{my_ip}}:3000/api/users/
         method: GET
+        status_code:
+          - 404
       with_sequence: count="50"  
              
     - name: "stop load test"
