--- a/rollback.yml
+++ b/rollback.yml
@@ -40,9 +40,9 @@
        method: POST
        body_format: json
        body: '{
-               "comment": "Looks like the deployment" {{deployment_events | first }} "triggered the issue. Rolling back to earlier build.",
-               "user": " {{commentuser}}",
-               "context": "Ansible Tower"
+               \"comment\": \"Looks like the deployment\" {{deployment_events | first }} \"triggered the issue. Rolling back to earlier build.\",
+               \"user\": \"{{commentuser}}\",
+               \"context\": \"Ansible Tower\"
             }'
 
     - name: stop the latest deployed docker
